syntax = "proto3";

package naryGreet;

option go_package ="Unary/GreetAPI";

message Greeting{
    string first_name =1;
    string second_name =2;
}

message GreetRequest{
    Greeting greeting =1;
}

message GreetResponse{
    string result =1;
}

service GreetService{
    // Unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};
}